# refactor-event_rs

./: .env  Cargo.toml  GEMINI.md  README.md
extra_java_res/: AlgorithmEntity.java  BaseConfigEntity.java  BoxEventBusinessService.java  CameraEntity.java  DeviceAdditionAttribute.java  DeviceAttribute.java  EventAsyncServiceImpl.java  EventCommonBusinessService.java  EventConstants.java  EventDto.java  EventEntity.java  EventFilterConfigEntity.java  EventReportedController.java  LargeModelConfVo.java  OtherEventsFilter.java  PlateEventsFilter.java  TaskEntity.java
src/: app_state.rs  lib.rs  main.rs  util.rs
src/ctl/: box_report_ctl.rs  bs_model.rs  mod.rs
src/models/: algorithm.rs  base_config.rs  camera.rs  event.rs  event_filter_config.rs  mod.rs  prelude.rs  review_data.rs  task.rs
src/service/: algorithm_svc.rs  base_config_svc.rs  camera_svc.rs  event_filter_config_svc.rs  event_processing_svc.rs  event_svc.rs  mod.rs  task_svc.rs
src/service/filters/: mod.rs  other_filter.rs  plate_filter.rs
