[package]
name = "event_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
base64 = "0.22.1"
chrono = { version = "0.4.43", features = ["serde"] }
dotenvy = "0.15.7"
redis = { version = "1.0.2", features = ["connection-manager", "tokio-comp"] }
reqwest = { version = "0.13.1", features = ["json"] }
sea-orm = { version = "1.1.19", features = ["runtime-tokio-rustls", "macros", "sqlx-mysql"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio", "tls-rustls", "chrono", "json"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4"] }
anyhow = "1.0.75"
